// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ./components/tree/demo/basic.md correctly 1`] = `
<ul
  class="ant-tree ant-tree-icon-hide"
  role="tree"
  unselectable="on"
>
  <li
    class="ant-tree-treenode-switcher-open ant-tree-treenode-checkbox-checked"
    role="treeitem"
  >
    <span
      class="ant-tree-switcher ant-tree-switcher_open"
    >
      <i
        aria-label="icon: caret-down"
        class="anticon anticon-caret-down ant-tree-switcher-icon"
      >
        <svg
          aria-hidden="true"
          class=""
          fill="currentColor"
          focusable="false"
          height="1em"
          width="1em"
        >
          <use
            href="#caret-down"
          />
        </svg>
      </i>
    </span>
    <span
      class="ant-tree-checkbox ant-tree-checkbox-checked"
    >
      <span
        class="ant-tree-checkbox-inner"
      />
    </span>
    <span
      class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-open"
      title="parent 1"
    >
      <span
        class="ant-tree-title"
      >
        parent 1
      </span>
    </span>
    <ul
      class="ant-tree-child-tree ant-tree-child-tree-open"
      data-expanded="true"
      role="group"
    >
      <li
        class="ant-tree-treenode-disabled ant-tree-treenode-switcher-open ant-tree-treenode-checkbox-checked ant-tree-treenode-selected"
        role="treeitem"
      >
        <span
          class="ant-tree-switcher ant-tree-switcher_open"
        >
          <i
            aria-label="icon: caret-down"
            class="anticon anticon-caret-down ant-tree-switcher-icon"
          >
            <svg
              aria-hidden="true"
              class=""
              fill="currentColor"
              focusable="false"
              height="1em"
              width="1em"
            >
              <use
                href="#caret-down"
              />
            </svg>
          </i>
        </span>
        <span
          class="ant-tree-checkbox ant-tree-checkbox-checked ant-tree-checkbox-disabled"
        >
          <span
            class="ant-tree-checkbox-inner"
          />
        </span>
        <span
          class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-open"
          title="parent 1-0"
        >
          <span
            class="ant-tree-title"
          >
            parent 1-0
          </span>
        </span>
        <ul
          class="ant-tree-child-tree ant-tree-child-tree-open"
          data-expanded="true"
          role="group"
        >
          <li
            class="ant-tree-treenode-switcher-close"
            role="treeitem"
          >
            <span
              class="ant-tree-switcher ant-tree-switcher-noop"
            />
            <span
              class="ant-tree-checkbox ant-tree-checkbox-disabled"
            >
              <span
                class="ant-tree-checkbox-inner"
              />
            </span>
            <span
              class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-normal"
              title="leaf"
            >
              <span
                class="ant-tree-title"
              >
                leaf
              </span>
            </span>
          </li>
          <li
            class="ant-tree-treenode-switcher-close"
            role="treeitem"
          >
            <span
              class="ant-tree-switcher ant-tree-switcher-noop"
            />
            <span
              class="ant-tree-checkbox"
            >
              <span
                class="ant-tree-checkbox-inner"
              />
            </span>
            <span
              class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-normal"
              title="leaf"
            >
              <span
                class="ant-tree-title"
              >
                leaf
              </span>
            </span>
          </li>
        </ul>
      </li>
      <li
        class="ant-tree-treenode-switcher-open ant-tree-treenode-checkbox-checked"
        role="treeitem"
      >
        <span
          class="ant-tree-switcher ant-tree-switcher_open"
        >
          <i
            aria-label="icon: caret-down"
            class="anticon anticon-caret-down ant-tree-switcher-icon"
          >
            <svg
              aria-hidden="true"
              class=""
              fill="currentColor"
              focusable="false"
              height="1em"
              width="1em"
            >
              <use
                href="#caret-down"
              />
            </svg>
          </i>
        </span>
        <span
          class="ant-tree-checkbox ant-tree-checkbox-checked"
        >
          <span
            class="ant-tree-checkbox-inner"
          />
        </span>
        <span
          class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-open"
          title="parent 1-1"
        >
          <span
            class="ant-tree-title"
          >
            parent 1-1
          </span>
        </span>
        <ul
          class="ant-tree-child-tree ant-tree-child-tree-open"
          data-expanded="true"
          role="group"
        >
          <li
            class="ant-tree-treenode-switcher-close ant-tree-treenode-checkbox-checked"
            role="treeitem"
          >
            <span
              class="ant-tree-switcher ant-tree-switcher-noop"
            />
            <span
              class="ant-tree-checkbox ant-tree-checkbox-checked"
            >
              <span
                class="ant-tree-checkbox-inner"
              />
            </span>
            <span
              class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-normal"
              title=""
            >
              <span
                class="ant-tree-title"
              >
                <span
                  style="color:#1890ff"
                >
                  sss
                </span>
              </span>
            </span>
          </li>
        </ul>
      </li>
    </ul>
  </li>
</ul>
`;

exports[`renders ./components/tree/demo/basic-controlled.md correctly 1`] = `
<ul
  class="ant-tree ant-tree-icon-hide"
  role="tree"
  unselectable="on"
>
  <li
    class="ant-tree-treenode-switcher-open ant-tree-treenode-checkbox-indeterminate"
    role="treeitem"
  >
    <span
      class="ant-tree-switcher ant-tree-switcher_open"
    >
      <i
        aria-label="icon: caret-down"
        class="anticon anticon-caret-down ant-tree-switcher-icon"
      >
        <svg
          aria-hidden="true"
          class=""
          fill="currentColor"
          focusable="false"
          height="1em"
          width="1em"
        >
          <use
            href="#caret-down"
          />
        </svg>
      </i>
    </span>
    <span
      class="ant-tree-checkbox ant-tree-checkbox-indeterminate"
    >
      <span
        class="ant-tree-checkbox-inner"
      />
    </span>
    <span
      class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-open"
      title="0-0"
    >
      <span
        class="ant-tree-title"
      >
        0-0
      </span>
    </span>
    <ul
      class="ant-tree-child-tree ant-tree-child-tree-open"
      data-expanded="true"
      role="group"
    >
      <li
        class="ant-tree-treenode-switcher-open ant-tree-treenode-checkbox-checked"
        role="treeitem"
      >
        <span
          class="ant-tree-switcher ant-tree-switcher_open"
        >
          <i
            aria-label="icon: caret-down"
            class="anticon anticon-caret-down ant-tree-switcher-icon"
          >
            <svg
              aria-hidden="true"
              class=""
              fill="currentColor"
              focusable="false"
              height="1em"
              width="1em"
            >
              <use
                href="#caret-down"
              />
            </svg>
          </i>
        </span>
        <span
          class="ant-tree-checkbox ant-tree-checkbox-checked"
        >
          <span
            class="ant-tree-checkbox-inner"
          />
        </span>
        <span
          class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-open"
          title="0-0-0"
        >
          <span
            class="ant-tree-title"
          >
            0-0-0
          </span>
        </span>
        <ul
          class="ant-tree-child-tree ant-tree-child-tree-open"
          data-expanded="true"
          role="group"
        >
          <li
            class="ant-tree-treenode-switcher-close ant-tree-treenode-checkbox-checked"
            role="treeitem"
          >
            <span
              class="ant-tree-switcher ant-tree-switcher-noop"
            />
            <span
              class="ant-tree-checkbox ant-tree-checkbox-checked"
            >
              <span
                class="ant-tree-checkbox-inner"
              />
            </span>
            <span
              class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-normal"
              title="0-0-0-0"
            >
              <span
                class="ant-tree-title"
              >
                0-0-0-0
              </span>
            </span>
          </li>
          <li
            class="ant-tree-treenode-switcher-close ant-tree-treenode-checkbox-checked"
            role="treeitem"
          >
            <span
              class="ant-tree-switcher ant-tree-switcher-noop"
            />
            <span
              class="ant-tree-checkbox ant-tree-checkbox-checked"
            >
              <span
                class="ant-tree-checkbox-inner"
              />
            </span>
            <span
              class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-normal"
              title="0-0-0-1"
            >
              <span
                class="ant-tree-title"
              >
                0-0-0-1
              </span>
            </span>
          </li>
          <li
            class="ant-tree-treenode-switcher-close ant-tree-treenode-checkbox-checked"
            role="treeitem"
          >
            <span
              class="ant-tree-switcher ant-tree-switcher-noop"
            />
            <span
              class="ant-tree-checkbox ant-tree-checkbox-checked"
            >
              <span
                class="ant-tree-checkbox-inner"
              />
            </span>
            <span
              class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-normal"
              title="0-0-0-2"
            >
              <span
                class="ant-tree-title"
              >
                0-0-0-2
              </span>
            </span>
          </li>
        </ul>
      </li>
      <li
        class="ant-tree-treenode-switcher-open"
        role="treeitem"
      >
        <span
          class="ant-tree-switcher ant-tree-switcher_open"
        >
          <i
            aria-label="icon: caret-down"
            class="anticon anticon-caret-down ant-tree-switcher-icon"
          >
            <svg
              aria-hidden="true"
              class=""
              fill="currentColor"
              focusable="false"
              height="1em"
              width="1em"
            >
              <use
                href="#caret-down"
              />
            </svg>
          </i>
        </span>
        <span
          class="ant-tree-checkbox"
        >
          <span
            class="ant-tree-checkbox-inner"
          />
        </span>
        <span
          class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-open"
          title="0-0-1"
        >
          <span
            class="ant-tree-title"
          >
            0-0-1
          </span>
        </span>
        <ul
          class="ant-tree-child-tree ant-tree-child-tree-open"
          data-expanded="true"
          role="group"
        >
          <li
            class="ant-tree-treenode-switcher-close"
            role="treeitem"
          >
            <span
              class="ant-tree-switcher ant-tree-switcher-noop"
            />
            <span
              class="ant-tree-checkbox"
            >
              <span
                class="ant-tree-checkbox-inner"
              />
            </span>
            <span
              class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-normal"
              title="0-0-1-0"
            >
              <span
                class="ant-tree-title"
              >
                0-0-1-0
              </span>
            </span>
          </li>
          <li
            class="ant-tree-treenode-switcher-close"
            role="treeitem"
          >
            <span
              class="ant-tree-switcher ant-tree-switcher-noop"
            />
            <span
              class="ant-tree-checkbox"
            >
              <span
                class="ant-tree-checkbox-inner"
              />
            </span>
            <span
              class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-normal"
              title="0-0-1-1"
            >
              <span
                class="ant-tree-title"
              >
                0-0-1-1
              </span>
            </span>
          </li>
          <li
            class="ant-tree-treenode-switcher-close"
            role="treeitem"
          >
            <span
              class="ant-tree-switcher ant-tree-switcher-noop"
            />
            <span
              class="ant-tree-checkbox"
            >
              <span
                class="ant-tree-checkbox-inner"
              />
            </span>
            <span
              class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-normal"
              title="0-0-1-2"
            >
              <span
                class="ant-tree-title"
              >
                0-0-1-2
              </span>
            </span>
          </li>
        </ul>
      </li>
      <li
        class="ant-tree-treenode-switcher-close"
        role="treeitem"
      >
        <span
          class="ant-tree-switcher ant-tree-switcher-noop"
        />
        <span
          class="ant-tree-checkbox"
        >
          <span
            class="ant-tree-checkbox-inner"
          />
        </span>
        <span
          class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-normal"
          title="0-0-2"
        >
          <span
            class="ant-tree-title"
          >
            0-0-2
          </span>
        </span>
      </li>
    </ul>
  </li>
  <li
    class="ant-tree-treenode-switcher-close"
    role="treeitem"
  >
    <span
      class="ant-tree-switcher ant-tree-switcher_close"
    >
      <i
        aria-label="icon: caret-down"
        class="anticon anticon-caret-down ant-tree-switcher-icon"
      >
        <svg
          aria-hidden="true"
          class=""
          fill="currentColor"
          focusable="false"
          height="1em"
          width="1em"
        >
          <use
            href="#caret-down"
          />
        </svg>
      </i>
    </span>
    <span
      class="ant-tree-checkbox"
    >
      <span
        class="ant-tree-checkbox-inner"
      />
    </span>
    <span
      class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-close"
      title="0-1"
    >
      <span
        class="ant-tree-title"
      >
        0-1
      </span>
    </span>
  </li>
  <li
    class="ant-tree-treenode-switcher-close"
    role="treeitem"
  >
    <span
      class="ant-tree-switcher ant-tree-switcher-noop"
    />
    <span
      class="ant-tree-checkbox"
    >
      <span
        class="ant-tree-checkbox-inner"
      />
    </span>
    <span
      class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-normal"
      title="0-2"
    >
      <span
        class="ant-tree-title"
      >
        0-2
      </span>
    </span>
  </li>
</ul>
`;

exports[`renders ./components/tree/demo/customized-icon.md correctly 1`] = `
<ul
  class="ant-tree"
  role="tree"
  unselectable="on"
>
  <li
    class="ant-tree-treenode-switcher-open"
    role="treeitem"
  >
    <span
      class="ant-tree-switcher ant-tree-switcher_open"
    >
      <i
        aria-label="icon: down"
        class="anticon anticon-down ant-tree-switcher-icon"
      >
        <svg
          aria-hidden="true"
          class=""
          fill="currentColor"
          focusable="false"
          height="1em"
          width="1em"
        >
          <use
            href="#down"
          />
        </svg>
      </i>
    </span>
    <span
      class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-open"
      title="parent 1"
    >
      <span
        class="ant-tree-iconEle ant-tree-icon__customize"
      >
        <i
          aria-label="icon: smile-o"
          class="anticon anticon-smile-o"
        >
          <svg
            aria-hidden="true"
            class=""
            fill="currentColor"
            focusable="false"
            height="1em"
            width="1em"
          >
            <use
              href="#smile-o"
            />
          </svg>
        </i>
      </span>
      <span
        class="ant-tree-title"
      >
        parent 1
      </span>
    </span>
    <ul
      class="ant-tree-child-tree ant-tree-child-tree-open"
      data-expanded="true"
      role="group"
    >
      <li
        class="ant-tree-treenode-switcher-open ant-tree-treenode-selected"
        role="treeitem"
      >
        <span
          class="ant-tree-switcher ant-tree-switcher-noop"
        />
        <span
          class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-normal ant-tree-node-selected"
          title="leaf"
        >
          <span
            class="ant-tree-iconEle ant-tree-icon__customize"
          >
            <i
              aria-label="icon: meh-o"
              class="anticon anticon-meh-o"
            >
              <svg
                aria-hidden="true"
                class=""
                fill="currentColor"
                focusable="false"
                height="1em"
                width="1em"
              >
                <use
                  href="#meh-o"
                />
              </svg>
            </i>
          </span>
          <span
            class="ant-tree-title"
          >
            leaf
          </span>
        </span>
      </li>
      <li
        class="ant-tree-treenode-switcher-open"
        role="treeitem"
      >
        <span
          class="ant-tree-switcher ant-tree-switcher-noop"
        />
        <span
          class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-normal"
          title="leaf"
        >
          <span
            class="ant-tree-iconEle ant-tree-icon__customize"
          >
            <i
              aria-label="icon: frown-o"
              class="anticon anticon-frown-o"
            >
              <svg
                aria-hidden="true"
                class=""
                fill="currentColor"
                focusable="false"
                height="1em"
                width="1em"
              >
                <use
                  href="#frown-o"
                />
              </svg>
            </i>
          </span>
          <span
            class="ant-tree-title"
          >
            leaf
          </span>
        </span>
      </li>
    </ul>
  </li>
</ul>
`;

exports[`renders ./components/tree/demo/directory.md correctly 1`] = `
<ul
  class="ant-tree ant-tree-directory"
  role="tree"
  unselectable="on"
>
  <li
    class="ant-tree-treenode-switcher-open"
    role="treeitem"
  >
    <span
      class="ant-tree-switcher ant-tree-switcher_open"
    >
      <i
        aria-label="icon: caret-down"
        class="anticon anticon-caret-down ant-tree-switcher-icon"
      >
        <svg
          aria-hidden="true"
          class=""
          fill="currentColor"
          focusable="false"
          height="1em"
          width="1em"
        >
          <use
            href="#caret-down"
          />
        </svg>
      </i>
    </span>
    <span
      class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-open"
      title="parent 0"
    >
      <span
        class="ant-tree-iconEle ant-tree-icon__customize"
      >
        <i
          aria-label="icon: folder-open"
          class="anticon anticon-folder-open"
        >
          <svg
            aria-hidden="true"
            class=""
            fill="currentColor"
            focusable="false"
            height="1em"
            width="1em"
          >
            <use
              href="#folder-open"
            />
          </svg>
        </i>
      </span>
      <span
        class="ant-tree-title"
      >
        parent 0
      </span>
    </span>
    <ul
      class="ant-tree-child-tree ant-tree-child-tree-open"
      data-expanded="true"
      role="group"
    >
      <li
        class=""
        role="treeitem"
      >
        <span
          class="ant-tree-switcher ant-tree-switcher-noop"
        />
        <span
          class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-normal"
          title="leaf 0-0"
        >
          <span
            class="ant-tree-iconEle ant-tree-icon__customize"
          >
            <i
              aria-label="icon: file"
              class="anticon anticon-file"
            >
              <svg
                aria-hidden="true"
                class=""
                fill="currentColor"
                focusable="false"
                height="1em"
                width="1em"
              >
                <use
                  href="#file"
                />
              </svg>
            </i>
          </span>
          <span
            class="ant-tree-title"
          >
            leaf 0-0
          </span>
        </span>
      </li>
      <li
        class=""
        role="treeitem"
      >
        <span
          class="ant-tree-switcher ant-tree-switcher-noop"
        />
        <span
          class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-normal"
          title="leaf 0-1"
        >
          <span
            class="ant-tree-iconEle ant-tree-icon__customize"
          >
            <i
              aria-label="icon: file"
              class="anticon anticon-file"
            >
              <svg
                aria-hidden="true"
                class=""
                fill="currentColor"
                focusable="false"
                height="1em"
                width="1em"
              >
                <use
                  href="#file"
                />
              </svg>
            </i>
          </span>
          <span
            class="ant-tree-title"
          >
            leaf 0-1
          </span>
        </span>
      </li>
    </ul>
  </li>
  <li
    class="ant-tree-treenode-switcher-open"
    role="treeitem"
  >
    <span
      class="ant-tree-switcher ant-tree-switcher_open"
    >
      <i
        aria-label="icon: caret-down"
        class="anticon anticon-caret-down ant-tree-switcher-icon"
      >
        <svg
          aria-hidden="true"
          class=""
          fill="currentColor"
          focusable="false"
          height="1em"
          width="1em"
        >
          <use
            href="#caret-down"
          />
        </svg>
      </i>
    </span>
    <span
      class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-open"
      title="parent 1"
    >
      <span
        class="ant-tree-iconEle ant-tree-icon__customize"
      >
        <i
          aria-label="icon: folder-open"
          class="anticon anticon-folder-open"
        >
          <svg
            aria-hidden="true"
            class=""
            fill="currentColor"
            focusable="false"
            height="1em"
            width="1em"
          >
            <use
              href="#folder-open"
            />
          </svg>
        </i>
      </span>
      <span
        class="ant-tree-title"
      >
        parent 1
      </span>
    </span>
    <ul
      class="ant-tree-child-tree ant-tree-child-tree-open"
      data-expanded="true"
      role="group"
    >
      <li
        class=""
        role="treeitem"
      >
        <span
          class="ant-tree-switcher ant-tree-switcher-noop"
        />
        <span
          class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-normal"
          title="leaf 1-0"
        >
          <span
            class="ant-tree-iconEle ant-tree-icon__customize"
          >
            <i
              aria-label="icon: file"
              class="anticon anticon-file"
            >
              <svg
                aria-hidden="true"
                class=""
                fill="currentColor"
                focusable="false"
                height="1em"
                width="1em"
              >
                <use
                  href="#file"
                />
              </svg>
            </i>
          </span>
          <span
            class="ant-tree-title"
          >
            leaf 1-0
          </span>
        </span>
      </li>
      <li
        class=""
        role="treeitem"
      >
        <span
          class="ant-tree-switcher ant-tree-switcher-noop"
        />
        <span
          class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-normal"
          title="leaf 1-1"
        >
          <span
            class="ant-tree-iconEle ant-tree-icon__customize"
          >
            <i
              aria-label="icon: file"
              class="anticon anticon-file"
            >
              <svg
                aria-hidden="true"
                class=""
                fill="currentColor"
                focusable="false"
                height="1em"
                width="1em"
              >
                <use
                  href="#file"
                />
              </svg>
            </i>
          </span>
          <span
            class="ant-tree-title"
          >
            leaf 1-1
          </span>
        </span>
      </li>
    </ul>
  </li>
</ul>
`;

exports[`renders ./components/tree/demo/draggable.md correctly 1`] = `
<ul
  class="ant-tree ant-tree-icon-hide draggable-tree"
  role="tree"
  unselectable="on"
>
  <li
    class="ant-tree-treenode-switcher-open"
    role="treeitem"
  >
    <span
      class="ant-tree-switcher ant-tree-switcher_open"
    >
      <i
        aria-label="icon: caret-down"
        class="anticon anticon-caret-down ant-tree-switcher-icon"
      >
        <svg
          aria-hidden="true"
          class=""
          fill="currentColor"
          focusable="false"
          height="1em"
          width="1em"
        >
          <use
            href="#caret-down"
          />
        </svg>
      </i>
    </span>
    <span
      aria-grabbed="true"
      class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-open draggable"
      draggable="true"
      title="0-0"
    >
      <span
        class="ant-tree-title"
      >
        0-0
      </span>
    </span>
    <ul
      class="ant-tree-child-tree ant-tree-child-tree-open"
      data-expanded="true"
      role="group"
    >
      <li
        class="ant-tree-treenode-switcher-open"
        role="treeitem"
      >
        <span
          class="ant-tree-switcher ant-tree-switcher_open"
        >
          <i
            aria-label="icon: caret-down"
            class="anticon anticon-caret-down ant-tree-switcher-icon"
          >
            <svg
              aria-hidden="true"
              class=""
              fill="currentColor"
              focusable="false"
              height="1em"
              width="1em"
            >
              <use
                href="#caret-down"
              />
            </svg>
          </i>
        </span>
        <span
          aria-grabbed="true"
          class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-open draggable"
          draggable="true"
          title="0-0-0"
        >
          <span
            class="ant-tree-title"
          >
            0-0-0
          </span>
        </span>
        <ul
          class="ant-tree-child-tree ant-tree-child-tree-open"
          data-expanded="true"
          role="group"
        >
          <li
            class="ant-tree-treenode-switcher-open"
            role="treeitem"
          >
            <span
              class="ant-tree-switcher ant-tree-switcher-noop"
            />
            <span
              aria-grabbed="true"
              class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-normal draggable"
              draggable="true"
              title="0-0-0-0"
            >
              <span
                class="ant-tree-title"
              >
                0-0-0-0
              </span>
            </span>
          </li>
          <li
            class="ant-tree-treenode-switcher-close"
            role="treeitem"
          >
            <span
              class="ant-tree-switcher ant-tree-switcher-noop"
            />
            <span
              aria-grabbed="true"
              class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-normal draggable"
              draggable="true"
              title="0-0-0-1"
            >
              <span
                class="ant-tree-title"
              >
                0-0-0-1
              </span>
            </span>
          </li>
          <li
            class="ant-tree-treenode-switcher-close"
            role="treeitem"
          >
            <span
              class="ant-tree-switcher ant-tree-switcher-noop"
            />
            <span
              aria-grabbed="true"
              class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-normal draggable"
              draggable="true"
              title="0-0-0-2"
            >
              <span
                class="ant-tree-title"
              >
                0-0-0-2
              </span>
            </span>
          </li>
        </ul>
      </li>
      <li
        class="ant-tree-treenode-switcher-close"
        role="treeitem"
      >
        <span
          class="ant-tree-switcher ant-tree-switcher_close"
        >
          <i
            aria-label="icon: caret-down"
            class="anticon anticon-caret-down ant-tree-switcher-icon"
          >
            <svg
              aria-hidden="true"
              class=""
              fill="currentColor"
              focusable="false"
              height="1em"
              width="1em"
            >
              <use
                href="#caret-down"
              />
            </svg>
          </i>
        </span>
        <span
          aria-grabbed="true"
          class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-close draggable"
          draggable="true"
          title="0-0-1"
        >
          <span
            class="ant-tree-title"
          >
            0-0-1
          </span>
        </span>
      </li>
      <li
        class="ant-tree-treenode-switcher-close"
        role="treeitem"
      >
        <span
          class="ant-tree-switcher ant-tree-switcher-noop"
        />
        <span
          aria-grabbed="true"
          class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-normal draggable"
          draggable="true"
          title="0-0-2"
        >
          <span
            class="ant-tree-title"
          >
            0-0-2
          </span>
        </span>
      </li>
    </ul>
  </li>
  <li
    class="ant-tree-treenode-switcher-close"
    role="treeitem"
  >
    <span
      class="ant-tree-switcher ant-tree-switcher_close"
    >
      <i
        aria-label="icon: caret-down"
        class="anticon anticon-caret-down ant-tree-switcher-icon"
      >
        <svg
          aria-hidden="true"
          class=""
          fill="currentColor"
          focusable="false"
          height="1em"
          width="1em"
        >
          <use
            href="#caret-down"
          />
        </svg>
      </i>
    </span>
    <span
      aria-grabbed="true"
      class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-close draggable"
      draggable="true"
      title="0-1"
    >
      <span
        class="ant-tree-title"
      >
        0-1
      </span>
    </span>
  </li>
  <li
    class="ant-tree-treenode-switcher-close"
    role="treeitem"
  >
    <span
      class="ant-tree-switcher ant-tree-switcher-noop"
    />
    <span
      aria-grabbed="true"
      class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-normal draggable"
      draggable="true"
      title="0-2"
    >
      <span
        class="ant-tree-title"
      >
        0-2
      </span>
    </span>
  </li>
</ul>
`;

exports[`renders ./components/tree/demo/dynamic.md correctly 1`] = `
<ul
  class="ant-tree ant-tree-icon-hide"
  role="tree"
  unselectable="on"
>
  <li
    class="ant-tree-treenode-switcher-close"
    role="treeitem"
  >
    <span
      class="ant-tree-switcher ant-tree-switcher_close"
    >
      <i
        aria-label="icon: caret-down"
        class="anticon anticon-caret-down ant-tree-switcher-icon"
      >
        <svg
          aria-hidden="true"
          class=""
          fill="currentColor"
          focusable="false"
          height="1em"
          width="1em"
        >
          <use
            href="#caret-down"
          />
        </svg>
      </i>
    </span>
    <span
      class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-close"
      title="Expand to load"
    >
      <span
        class="ant-tree-title"
      >
        Expand to load
      </span>
    </span>
  </li>
  <li
    class="ant-tree-treenode-switcher-close"
    role="treeitem"
  >
    <span
      class="ant-tree-switcher ant-tree-switcher_close"
    >
      <i
        aria-label="icon: caret-down"
        class="anticon anticon-caret-down ant-tree-switcher-icon"
      >
        <svg
          aria-hidden="true"
          class=""
          fill="currentColor"
          focusable="false"
          height="1em"
          width="1em"
        >
          <use
            href="#caret-down"
          />
        </svg>
      </i>
    </span>
    <span
      class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-close"
      title="Expand to load"
    >
      <span
        class="ant-tree-title"
      >
        Expand to load
      </span>
    </span>
  </li>
  <li
    class=""
    role="treeitem"
  >
    <span
      class="ant-tree-switcher ant-tree-switcher-noop"
    />
    <span
      class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-normal"
      title="Tree Node"
    >
      <span
        class="ant-tree-title"
      >
        Tree Node
      </span>
    </span>
  </li>
</ul>
`;

exports[`renders ./components/tree/demo/line.md correctly 1`] = `
<ul
  class="ant-tree ant-tree-icon-hide ant-tree-show-line"
  role="tree"
  unselectable="on"
>
  <li
    class="ant-tree-treenode-switcher-open"
    role="treeitem"
  >
    <span
      class="ant-tree-switcher ant-tree-switcher_open"
    >
      <i
        aria-label="icon: minus-square"
        class="anticon anticon-minus-square ant-tree-switcher-line-icon"
      >
        <svg
          aria-hidden="true"
          class=""
          fill="currentColor"
          focusable="false"
          height="1em"
          width="1em"
        >
          <use
            href="#minus-square"
          />
        </svg>
      </i>
    </span>
    <span
      class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-open"
      title="parent 1"
    >
      <span
        class="ant-tree-title"
      >
        parent 1
      </span>
    </span>
    <ul
      class="ant-tree-child-tree ant-tree-child-tree-open"
      data-expanded="true"
      role="group"
    >
      <li
        class="ant-tree-treenode-switcher-open"
        role="treeitem"
      >
        <span
          class="ant-tree-switcher ant-tree-switcher_open"
        >
          <i
            aria-label="icon: minus-square"
            class="anticon anticon-minus-square ant-tree-switcher-line-icon"
          >
            <svg
              aria-hidden="true"
              class=""
              fill="currentColor"
              focusable="false"
              height="1em"
              width="1em"
            >
              <use
                href="#minus-square"
              />
            </svg>
          </i>
        </span>
        <span
          class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-open"
          title="parent 1-0"
        >
          <span
            class="ant-tree-title"
          >
            parent 1-0
          </span>
        </span>
        <ul
          class="ant-tree-child-tree ant-tree-child-tree-open"
          data-expanded="true"
          role="group"
        >
          <li
            class="ant-tree-treenode-switcher-close"
            role="treeitem"
          >
            <span
              class="ant-tree-switcher ant-tree-switcher-noop"
            >
              <i
                aria-label="icon: file"
                class="anticon anticon-file ant-tree-switcher-line-icon"
              >
                <svg
                  aria-hidden="true"
                  class=""
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  width="1em"
                >
                  <use
                    href="#file"
                  />
                </svg>
              </i>
            </span>
            <span
              class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-normal"
              title="leaf"
            >
              <span
                class="ant-tree-title"
              >
                leaf
              </span>
            </span>
          </li>
          <li
            class="ant-tree-treenode-switcher-close"
            role="treeitem"
          >
            <span
              class="ant-tree-switcher ant-tree-switcher-noop"
            >
              <i
                aria-label="icon: file"
                class="anticon anticon-file ant-tree-switcher-line-icon"
              >
                <svg
                  aria-hidden="true"
                  class=""
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  width="1em"
                >
                  <use
                    href="#file"
                  />
                </svg>
              </i>
            </span>
            <span
              class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-normal"
              title="leaf"
            >
              <span
                class="ant-tree-title"
              >
                leaf
              </span>
            </span>
          </li>
          <li
            class="ant-tree-treenode-switcher-close"
            role="treeitem"
          >
            <span
              class="ant-tree-switcher ant-tree-switcher-noop"
            >
              <i
                aria-label="icon: file"
                class="anticon anticon-file ant-tree-switcher-line-icon"
              >
                <svg
                  aria-hidden="true"
                  class=""
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  width="1em"
                >
                  <use
                    href="#file"
                  />
                </svg>
              </i>
            </span>
            <span
              class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-normal"
              title="leaf"
            >
              <span
                class="ant-tree-title"
              >
                leaf
              </span>
            </span>
          </li>
        </ul>
      </li>
      <li
        class="ant-tree-treenode-switcher-close"
        role="treeitem"
      >
        <span
          class="ant-tree-switcher ant-tree-switcher_close"
        >
          <i
            aria-label="icon: plus-square"
            class="anticon anticon-plus-square ant-tree-switcher-line-icon"
          >
            <svg
              aria-hidden="true"
              class=""
              fill="currentColor"
              focusable="false"
              height="1em"
              width="1em"
            >
              <use
                href="#plus-square"
              />
            </svg>
          </i>
        </span>
        <span
          class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-close"
          title="parent 1-1"
        >
          <span
            class="ant-tree-title"
          >
            parent 1-1
          </span>
        </span>
      </li>
      <li
        class="ant-tree-treenode-switcher-close"
        role="treeitem"
      >
        <span
          class="ant-tree-switcher ant-tree-switcher_close"
        >
          <i
            aria-label="icon: plus-square"
            class="anticon anticon-plus-square ant-tree-switcher-line-icon"
          >
            <svg
              aria-hidden="true"
              class=""
              fill="currentColor"
              focusable="false"
              height="1em"
              width="1em"
            >
              <use
                href="#plus-square"
              />
            </svg>
          </i>
        </span>
        <span
          class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-close"
          title="parent 1-2"
        >
          <span
            class="ant-tree-title"
          >
            parent 1-2
          </span>
        </span>
      </li>
    </ul>
  </li>
</ul>
`;

exports[`renders ./components/tree/demo/search.md correctly 1`] = `
<div>
  <span
    class="ant-input-search ant-input-affix-wrapper"
    style="margin-bottom:8px"
  >
    <input
      class="ant-input"
      placeholder="Search"
      type="text"
      value=""
    />
    <span
      class="ant-input-suffix"
    >
      <i
        aria-label="icon: search"
        class="anticon anticon-search ant-input-search-icon"
        tabindex="-1"
      >
        <svg
          aria-hidden="true"
          class=""
          fill="currentColor"
          focusable="false"
          height="1em"
          width="1em"
        >
          <use
            href="#search"
          />
        </svg>
      </i>
    </span>
  </span>
  <ul
    class="ant-tree ant-tree-icon-hide"
    role="tree"
    unselectable="on"
  >
    <li
      class="ant-tree-treenode-switcher-close"
      role="treeitem"
    >
      <span
        class="ant-tree-switcher ant-tree-switcher_close"
      >
        <i
          aria-label="icon: caret-down"
          class="anticon anticon-caret-down ant-tree-switcher-icon"
        >
          <svg
            aria-hidden="true"
            class=""
            fill="currentColor"
            focusable="false"
            height="1em"
            width="1em"
          >
            <use
              href="#caret-down"
            />
          </svg>
        </i>
      </span>
      <span
        class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-close"
        title=""
      >
        <span
          class="ant-tree-title"
        >
          <span>
            <span
              style="color:#f50"
            />
            0-0
          </span>
        </span>
      </span>
    </li>
    <li
      class="ant-tree-treenode-switcher-close"
      role="treeitem"
    >
      <span
        class="ant-tree-switcher ant-tree-switcher_close"
      >
        <i
          aria-label="icon: caret-down"
          class="anticon anticon-caret-down ant-tree-switcher-icon"
        >
          <svg
            aria-hidden="true"
            class=""
            fill="currentColor"
            focusable="false"
            height="1em"
            width="1em"
          >
            <use
              href="#caret-down"
            />
          </svg>
        </i>
      </span>
      <span
        class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-close"
        title=""
      >
        <span
          class="ant-tree-title"
        >
          <span>
            <span
              style="color:#f50"
            />
            0-1
          </span>
        </span>
      </span>
    </li>
    <li
      class="ant-tree-treenode-switcher-close"
      role="treeitem"
    >
      <span
        class="ant-tree-switcher ant-tree-switcher-noop"
      />
      <span
        class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-normal"
        title=""
      >
        <span
          class="ant-tree-title"
        >
          <span>
            <span
              style="color:#f50"
            />
            0-2
          </span>
        </span>
      </span>
    </li>
  </ul>
</div>
`;
